# livelylemur

./: README.md  direct_test.py  install.sh  pyproject.toml
src/livelylemur/: __init__.py  cli.py  fallback.py  ocr.py
