[project]
name = "livelylemur"
version = "0.1.0"
description = "Extract text from images using OCR"
readme = "README.md"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
livelylemur = "livelylemur.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
